<resources>
    <string name="app_name">prototypea2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="test_Home_fragment">Home fragment</string>
    <string name="test_AddItem_fragment">Add Item fragment</string>
    <string name="test_EditItem_fragment">Edit Item fragment</string>

    <string name="test_list_item">List item test text</string>
    <string name="test_list_item0">Dude\'s Holly Hocks</string>
    <string name="test_list_item1">Backyard Monet</string>
    <string name="test_list_item2">Dancing Daisy</string>
    <string name="test_list_item3">Garden Findings</string>
    <string name="test_list_item4">Hello Hot Stuff</string>
    <string name="test_list_item5">Love Wins</string>
    <string name="test_list_item6">Sycamore Park</string>
    <string name="test_list_item7">Daily Pickens\'</string>
    <string name="test_list_item8">Storm Skies</string>
    <string name="test_list_item9">Suck It</string>


    <string name="add_item_name">Name</string>
    <string name="add_item_medium">Medium</string>
    <string name="add_item_purchase_price">Purchase Price</string>
    <string name="add_item_size">Size</string>
    <string name="add_item_location">Location</string>
    <string name="add_item_height">H</string>
    <string name="add_item_length">L</string>
    <string name="add_item_x">X</string>
    <string name="add_item_framed">Framed</string>
    <string name="add_item_photo">Select Photo:</string>
    <string name="add_item_confirm">Save</string>
    <string name="add_item_width">W</string>
    <string name="add_item_depth">D</string>
    <string name="add_item_date">Purchase Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="view_item_title">"Title: "</string>
    <string name="view_item_medium">"Medium: "</string>
    <string name="view_item_purchase_price">"Purchase Price: "</string>
    <string name="view_item_HWD">"H x W x D : "</string>
    <string name="view_item_locaiton">"Location: "</string>
    <string name="view_item_purchase_date">"Purchase Date: "</string>
    <string name="view_item_creation_date">"Creation Date: "</string>
    <string name="view_item_framed">"Framed: "</string>
    <string name="add_item_creation_date">Creation Date</string>
    <string name="view_item_option_edit">Edit</string>
    <string name="view_item_option_delete">Delete</string>
    <string name="add_item_sold">Sold</string>
    <string name="add_item_purchase_date">Purchase Date</string>
    <string name="view_item_sold">"Sold: "</string>
    <string name="add_item_note">Note</string>
    <string name="update_db">UPDATE DB</string>
    <string name="add_item_on_web_store">On Web Store</string>
    <string name="add_item_categories">Categories</string>
    <string name="add_item_archive">Archive</string>
    <string name="view_item_categories">Categories:</string>
    <string name="view_item_onWebStore">On Web Store:</string>
    <string name="export_csv_title">Send File Via Email</string>
    <string name="export_csv_email">Email</string>
    <string name="export_csv_button">Export</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_category">Search by category</string>
    <string name="view_item_option_emailpic">Email Picture</string>
    <string name="multi_select_title">Enter in new location for selected items:</string>
    <string name="multi_edit_loc">Location</string>
    <string name="multi_edit_btn">Save</string>
    <string name="mass_export_test_btn">Test Mass Export</string>
</resources>