<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItemFragment"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="914dp">

                <EditText
                    android:id="@+id/editItemNameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/add_item_name"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editItemMediumET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_medium"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/editItemNameET"
                    app:layout_constraintStart_toStartOf="@+id/editItemNameET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemNameET" />

                <EditText
                    android:id="@+id/editItemPurchasePriceET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_purchase_price"
                    android:inputType="text"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@+id/editItemMediumET"
                    app:layout_constraintStart_toStartOf="@+id/editItemMediumET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemMediumET" />

                <EditText
                    android:id="@+id/editItemHET"
                    android:layout_width="63dp"
                    android:layout_height="65dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_height"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemPurchasePriceET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemPurchasePriceET" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/add_item_x"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/editItemHET"
                    app:layout_constraintTop_toTopOf="@+id/editItemHET" />

                <EditText
                    android:id="@+id/editItemWET"
                    android:layout_width="63dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_width"
                    android:inputType="textPersonName"
                    android:text="Name"
                    app:layout_constraintStart_toEndOf="@+id/textView"
                    app:layout_constraintTop_toTopOf="@+id/editItemHET" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/add_item_x"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/editItemWET"
                    app:layout_constraintTop_toTopOf="@+id/editItemWET" />

                <EditText
                    android:id="@+id/editItemDET"
                    android:layout_width="63dp"
                    android:layout_height="65dp"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_depth"
                    android:inputType="textPersonName"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/editItemWET" />

                <EditText
                    android:id="@+id/editItemLocationET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_location"
                    android:inputType="textImeMultiLine"
                    android:text="Name"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemHET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemHET" />

                <EditText
                    android:id="@+id/editItemDateET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_purchase_date"
                    android:inputType="date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemLocationET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemLocationET" />

                <EditText
                    android:id="@+id/editItemCreationDateET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_creation_date"
                    android:inputType="date"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemDateET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemDateET" />

                <CheckBox
                    android:id="@+id/editItemFramedCBX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_item_framed"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemCreationDateET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemCreationDateET" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/add_item_photo"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemFramedCBX"
                    app:layout_constraintTop_toBottomOf="@+id/editItemFramedCBX" />

                <ImageButton
                    android:id="@+id/editItemBrowseIB"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_folder_24"
                    android:tint="@color/purple_500"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="@+id/textView3" />

                <ImageButton
                    android:id="@+id/editItemPhotoIB"
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/baseline_camera_alt_24"
                    android:tint="@color/purple_500"
                    app:layout_constraintStart_toEndOf="@+id/editItemBrowseIB"
                    app:layout_constraintTop_toTopOf="@+id/editItemBrowseIB" />

                <Button
                    android:id="@+id/editItemConfirmBTN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/add_item_confirm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <CheckBox
                    android:id="@+id/editItemSoldCBX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="@string/add_item_sold"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@+id/editItemFramedCBX"
                    app:layout_constraintTop_toTopOf="@+id/editItemFramedCBX" />

                <EditText
                    android:id="@+id/editItemNoteET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/add_item_note"
                    android:inputType="textMultiLine"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <CheckBox
                    android:id="@+id/editItemIsOnWebStoreCBX"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add_item_on_web_store"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="@+id/editItemNoteET"
                    app:layout_constraintTop_toBottomOf="@+id/editItemNoteET" />

                <EditText
                    android:id="@+id/editItemCategoriesET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/add_item_categories"
                    android:inputType="text|textMultiLine"
                    android:text="Name"
                    app:layout_constraintStart_toStartOf="@+id/editItemIsOnWebStoreCBX"
                    app:layout_constraintTop_toBottomOf="@+id/editItemIsOnWebStoreCBX" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>